--- a/components/article/2-render.mdx
+++ b/components/article/2-render.mdx
@@ -1,9 +1,9 @@
 import {SrcReactEditor} from "../editor/SrcReactEditor";
 
 export const meta = {
-  id: 'introduce',
-  name: '教程介绍',
+  id: 'render',
+  name: 'Render 渲染',
 }
 
-# 教程介绍
+# Render 渲染
 
