--- a/components/article/0-introduce.mdx
+++ b/components/article/0-introduce.mdx
@@ -1,4 +1,4 @@
-import {SrcReactEditor} from "../editor/SrcReactEditor";
+import {SrcReactEditor} from "../editor/SrcReactEditor"; import {ReactEditor} from "../editor/ReactEditor";
 
 export const meta = {
   id: 'introduce',
@@ -7,3 +7,26 @@ export const meta = {
 
 # 教程介绍
 
+## 关于React
+
+React是一个用于构建用户界面的Javascript库。
+React是当下最流行的前端框架之一。
+
+## 关于本文档
+
+本文档主要参考[官方文档](https://zh-hans.reactjs.org/docs/getting-started.html)，并提供交互式代码编辑器帮助学习。
+
+要阅读本文档，你需要首先了解基本的HTML，JS，CSS知识。
+
+## 关于代码编辑器
+
+一个最简单的 Hello World 示例如下：
+
+<SrcReactEditor js={'/code/hello-world.jsx'} css={'/code/hello-world.css'}/>
+
+<p/>
+如你所见，我们成功地渲染出了蓝色的`Hello World`。
+
+在代码编辑器中，你只需要提供一个名为`App`的组件，他会被渲染到右侧的预览框内。
+
+现在，你可以开始学习React。
