--- a/components/article/1-hello-world.mdx
+++ b/components/article/1-hello-world.mdx
@@ -7,4 +7,4 @@ export const meta = {
 
 # Hello World
 
-<SrcReactEditor js={'/code/hello-world.jsx'}/>
+<SrcReactEditor js={'/code/hello-world.jsx'} css={'/code/hello-world.css'}/>
