--- a/components/article/0-introduce.mdx
+++ b/components/article/0-introduce.mdx
@@ -25,8 +25,9 @@ React是当下最流行的前端框架之一。
 <SrcReactEditor js={'/code/hello-world.jsx'} css={'/code/hello-world.css'}/>
 
 <p/>
-如你所见，我们成功地渲染出了蓝色的`Hello World`。
 
-在代码编辑器中，你只需要提供一个名为`App`的组件，他会被渲染到右侧的预览框内。
+如你所见，我们成功地渲染出了蓝色的 `Hello World`。
+
+在代码编辑器中，你只需要将组件渲染到`id=root`的节点上，结果就会显示在右侧预览框内。
 
 现在，你可以开始学习React。
