code block full screen

--- a/components/article/3-render.mdx
+++ b/components/article/3-render.mdx
@@ -2,7 +2,7 @@ import {SrcReactEditor} from "../editor/SrcReactEditor";
 
 export const meta = {
   id: 'render',
-  name: '元素渲染'
+  name: '渲染 Render'
 }
 
 # 元素渲染
