--- a/components/article/4-component.mdx
+++ b/components/article/4-component.mdx
@@ -2,7 +2,7 @@ import {SrcReactEditor} from "../editor/SrcReactEditor";
 
 export const meta = {
   id: 'component',
-  name: '组件'
+  name: '组件 Component'
 }
 
 # 组件
