--- a/components/article/0-introduce.mdx
+++ b/components/article/0-introduce.mdx
@@ -1,4 +1,4 @@
-import {SrcReactEditor} from "../editor/SrcReactEditor"; import {ReactEditor} from "../editor/ReactEditor";
+import {SrcReactEditor} from "../editor/SrcReactEditor";
 
 export const meta = {
   id: 'introduce',
