--- a/components/article/2-jsx.mdx
+++ b/components/article/2-jsx.mdx
@@ -35,7 +35,7 @@ const App = () => React.createElement(
 关于React元素对象的细节将会在下一节讲到。
 
 有了JSX，我们可以方便的在JS里写UI代码。同时，因为本质还是JS，我们可以在JSX里插入JS代码段。
-只需要用大括号`{}`框住，可以在属性或是内容里插入JS。
+只需要用大括号`{}`框住，可以在属性或是内容里插入JS，事件处理函数也可以直接插入其中。
 
 <SrcReactEditor js={'/code/jsx.jsx'}/>
 
