--- a/components/article/3-render.mdx
+++ b/components/article/3-render.mdx
@@ -11,6 +11,7 @@ export const meta = {
 
 React元素并不是浏览器的DOM元素，而是Javascript对象，创建它们的开销远小于DOM元素。
 而React的工作就是把React元素渲染成DOM元素。
+并且在此过程中，React会比较元素的diff，并进行最小化的更新，而非重建整个DOM。
 
 下面是一个最简化的例子，调用`ReactDOM.render`方法就可以把React元素渲染到目标DOM元素上：
 
