--- a/components/article/8-controlled.mdx
+++ b/components/article/8-controlled.mdx
@@ -50,3 +50,23 @@ clear.onclick = () => text.value = ''
 也许乍一看，你会觉得React这样不是更复杂么。
 那么不妨想一想，现在，如果我们有新的需求，要在文本框边上显示字数，两种模式下改如何修改，孰优孰劣。
 
+## 状态提升
+
+除了默认的HTML标签，自定义组件许多时候也需要受控。这种模式又被称为状态提升。
+
+考虑现在我们有一个温度输入的组件，可以选择单位是摄氏度或者华氏度。
+
+<SrcReactEditor js={'/code/controlled2.jsx'}/>
+
+现在我们的需求是一个自动温度转换器，
+
+理所当然的，我们在`App`里加入了两个输入框
+
+<SrcReactEditor js={'/code/controlled2-2.jsx'}/>
+
+但是很可惜，两个文本框并没有自动转换，因为它们的状态由自己管理，不受外部控制。
+
+这个时候，我们就需要把组件变成**受控组件**，换句话也可以说把组件的**状态提升**到父组件。
+
+<SrcReactEditor js={'/code/controlled2-3.jsx'}/>
+
