--- a/components/article/8-controlled.mdx
+++ b/components/article/8-controlled.mdx
@@ -31,6 +31,7 @@ clear.onclick = () => text.value = ''
 ```
 
 我们需要获取对应的DOM元素对象，然后得到文本内容。
+
 在React里，你当然也可以采用同样的方法，具体的方法在之后的章节学习`useRef`会提到。
 
 但这并不是首选的方法。
@@ -43,12 +44,10 @@ clear.onclick = () => text.value = ''
 
 下面的两个按钮则只需要面向`content`状态，而不需要和`input`接触。三个组件之间通过`content`联系了起来。
 
-所谓受控组件，就是状态受到父组件控制的组件。
+这种组件被称为**受控组件**，其状态受到父组件控制的组件。
 这样做的好处是，在需要与组件状态进行交互时，不需要通过命令来改变，而只需要改变数据。
-这其实也是React响应式思想的体现。
 
-也许乍一看，你会觉得React这样不是更复杂么。
-那么不妨想一想，现在，如果我们有新的需求，要在文本框边上显示字数，两种模式下改如何修改，孰优孰劣。
+**这其实也是React响应式思想的体现。**
 
 ## 状态提升
 
@@ -70,3 +69,4 @@ clear.onclick = () => text.value = ''
 
 <SrcReactEditor js={'/code/controlled2-3.jsx'}/>
 
+状态提升是
