--- a/components/article/5-state.mdx
+++ b/components/article/5-state.mdx
@@ -29,7 +29,7 @@ export const meta = {
 细心的你可能注意到，`setCount`方法可以接收值(例如`0`)或函数(例如`c => c + 1`)作为参数。
 
 当我们更新状态的时候，如果要用到状态原来的值，不应该直接使用。
-正确的方法时使用函数作为参数，状态的当前值将会作为函数的入参，
+正确的方法是使用函数作为参数，状态的当前值将会作为函数的入参，
 
 ```js
 setCount(count + 1) //错误
