--- a/components/article/8-controlled.mdx
+++ b/components/article/8-controlled.mdx
@@ -44,7 +44,7 @@ clear.onclick = () => text.value = ''
 
 下面的两个按钮则只需要面向`content`状态，而不需要和`input`接触。三个组件之间通过`content`联系了起来。
 
-这种组件被称为**受控组件**，其状态受到父组件控制的组件。
+像本例中的`input`一样的组件被称为**受控组件**，其状态受到父组件控制的组件。
 这样做的好处是，在需要与组件状态进行交互时，不需要通过命令来改变，而只需要改变数据。
 
 **这其实也是React响应式思想的体现。**
@@ -69,4 +69,43 @@ clear.onclick = () => text.value = ''
 
 <SrcReactEditor js={'/code/controlled2-3.jsx'}/>
 
-状态提升是
+## 小结
+
+**受控组件**是指状态收到父组件控制的组件，利用受控组件，业务逻辑可以关注在状态上而非UI元素。
+
+对于自定义组件，我们可以主动把它们变换成受控组件，使得父组件可以关联子组件的状态。这种模式被称为**状态提升**
+
+## 思考
+
+但是，状态提升也并非银弹，想象我们的UI组件逐渐复杂，从顶层组件到底层组件经历了许多层自定义组件的嵌套。
+
+现在再利用状态提升将状态汇聚到顶层组件，且不说逻辑混杂，光是一层层的属性传递就已经很让人难受了。
+
+```jsx
+const Avatar = () => (
+  <img src={user.avatar}/>
+)
+
+const UserInfo = () => (
+  <div>
+    <Avatar user={user}/>
+    ...
+  </div>
+)
+
+const AppBar = () => (
+  <div>
+    <UserInfo user={user}/>
+    ...
+  </div>
+)
+
+const App = () => (
+  <div>
+    <AppBar user={user}/>
+    ...
+  </div>
+)
+```
+
+如何处理这种情况，我们会在后面的章节学习到。
