--- a/components/article/5-state.mdx
+++ b/components/article/5-state.mdx
@@ -2,7 +2,7 @@ import {SrcReactEditor} from "../editor/SrcReactEditor";
 
 export const meta = {
   id: 'state',
-  name: '状态 State'
+  name: '状态 useState'
 }
 
 在前一节我们讲到，属性`props`是外部给定的不可变状态，而组件内部的状态就得用到`state`。
