--- a/components/article/effect.mdx
+++ b/components/article/effect.mdx
@@ -2,7 +2,7 @@ import {SrcReactEditor} from "../editor/SrcReactEditor";
 
 export const meta = {
   id: 'effect',
-  name: '副作用 Effect'
+  name: '副作用 useEffect'
 }
 
 前几节我们学习了组件并且可以通过`useState`控制他们的状态。
