--- a/components/article/memo.mdx
+++ b/components/article/memo.mdx
@@ -2,7 +2,7 @@ import {SrcReactEditor} from "../editor/SrcReactEditor";
 
 export const meta = {
   id: 'memo',
-  name: 'useMemo & useCallback'
+  name: 'useMemo & memo'
 }
 
 ## useMemo
