--- a/components/article/basic/hook.mdx
+++ b/components/article/basic/hook.mdx
@@ -1,4 +1,4 @@
-import {SrcReactEditor} from "../editor/SrcReactEditor";
+import {SrcReactEditor} from "../../editor/SrcReactEditor";
 
 export const meta = {
   id: 'hook',
