--- a/components/article/basic/tic-tac-toe.mdx
+++ b/components/article/basic/tic-tac-toe.mdx
@@ -1,4 +1,4 @@
-import {SrcReactEditor} from "../editor/SrcReactEditor"; import {
+import {SrcReactEditor} from "../../editor/SrcReactEditor"; import {
   Button,
   Collapse
 } from "@blueprintjs/core"; import {useState} from "react";
