--- a/components/article/basic/tic-tac-toe.mdx
+++ b/components/article/basic/tic-tac-toe.mdx
@@ -1,7 +1,4 @@
-import {SrcReactEditor} from "../../editor/SrcReactEditor"; import {
-  Button,
-  Collapse
-} from "@blueprintjs/core"; import {useState} from "react";
+import {SrcReactEditor} from "../../editor/SrcReactEditor"; import {Button} from "@blueprintjs/core"; import {useState} from "react";
 
 export const meta = {
   id: 'tic-tac-toe',
@@ -34,9 +31,10 @@ export const Answer = () => {
   return (
     <>
       <Button onClick={() => setShow(e => !e)} text={show ? '隐藏参考示例' : '显示参考示例'}/>
-      <Collapse isOpen={show} keepChildrenMounted>
-        <SrcReactEditor js={'/code/tic-tac-toe.jsx'} css={'/code/tic-tac-toe.css'}/>
-      </Collapse>
+      <SrcReactEditor
+        className={show ? '' : 'hidden'}
+        js={'/code/tic-tac-toe.jsx'}
+        css={'/code/tic-tac-toe.css'}/>
     </>
   )
 }
